# openapi.yaml
@@ -69,6 +69,25 @@ paths:
           description: Bad request
         '500':
           description: Internal server error
+  /config/database:
+    put:
+      summary: Update database configuration
+      description: Update database configuration
+      operationId: UpdateDatabaseConfig
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/databaseConfig'
+      responses:
+        '200':
+          description: Configuration updated
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+
 
 components:
   schemas:
@@ -82,3 +101,16 @@ components:
         score:
           type: number
           format: double
+    databaseConfig:
+      type: object
+      required:
+        - url
+        - username
+        - password
+      properties:
+        url:
+          type: string
+        username:
+          type: string
+        password:
+          type: string
